--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -15,7 +15,7 @@ body {
   font-weight: 400;
   color: #333;
   line-height: ms(1);
-  font-family: "PTSansRegular", serif;
+  font-family: "RobotoBold", serif; 
 }
 
 h1, h2, h3, h4, h5, {
@@ -28,7 +28,7 @@ p{
   //font-size:1.7em; 
   margin: 5px auto; 
   padding: 10px 5px;
-  text-shadow: 0 1px 0 #eee; 
+  // text-shadow: 0 1px 0 #eee; 
   //font-size: ms(1, 9px, $gold);
   @include ms-respond(font-size, 1); 
 }
