--- a/assets/template/blocks/head.jade
+++ b/assets/template/blocks/head.jade
@@ -2,6 +2,6 @@ meta(charset='utf-8')
 meta(name='viewport', content='width=device-width, initial-scale=1.0')
 meta(name='description', content='')
 meta(name='author', content='')
-title Page title
+title git test
 link(href='css/main.css', type="text/css", rel="stylesheet")
 script(src='./js/index.js')
